기본 앱 화면 구성

--- a/DoitMission_10/app/src/main/res/values/strings.xml
+++ b/DoitMission_10/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="메뉴1">메뉴1</string>
+    <string name="메뉴2">메뉴2</string>
+    <string name="메뉴3">메뉴3</string>
 </resources>
